LA/tests/test127.a
void main ( ){

  :entry
  int64[][] a
  int64 i
  int64 j

  a <- new Array(10, 10)
  i <- 1
  j <- -1
  a[i][j] <- 21

  return 

}
